--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -112,6 +112,14 @@
     "placeholder_new_comment": "Laat een reactie achter",
     "send": "Verzenden"
   },
+  "conflict": {
+    "keep_initial": "TO TRANSLATE - Keep initial content",
+    "keep_new": "TO TRANSLATE - Update with new content",
+    "initial_content": "TO TRANSLATE - Initial content",
+    "merge": "TO TRANSLATE - Merge both contents",
+    "new_content": "TO TRANSLATE - New content",
+    "title": "TO TRANSLATE - Conflict detected"
+  },
   "date": {
     "april": "april",
     "august": "augustus",
