--- a/src/lib/assets/i18n/cz.json
+++ b/src/lib/assets/i18n/cz.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Komentář",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "komentář(e)",
     "new_comment": "Komentář",
     "placeholder_new_comment": "Zanechat komentář",
