--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Kommentar",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "Kommentar(e)",
     "new_comment": "Kommentieren",
     "placeholder_new_comment": "Hinterlassen Sie einen Kommentar",
