--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Σχόλιο",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "σχόλιο/α",
     "new_comment": "Σχόλιο",
     "placeholder_new_comment": "Αφήστε ένα σχόλιο",
