--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Kommentaar",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "kommentaari",
     "new_comment": "Kommentaar",
     "placeholder_new_comment": "Sisesta kommentaar",
