--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Kommentti",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "Kommentit",
     "new_comment": "Kommentti",
     "placeholder_new_comment": "Jätä kommentti",
