--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Commenta",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "commenti",
     "new_comment": "Commento",
     "placeholder_new_comment": "Lascia un commento",
