--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Komentārs",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "komentārs(i)",
     "new_comment": "Jauns komentārs",
     "placeholder_new_comment": "Atstāt komentāru",
