--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Comentar",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "comentário(s)",
     "new_comment": "Comentário",
     "placeholder_new_comment": "Deixe um comentário",
