--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -107,6 +107,7 @@
   },
   "comments": {
     "comment": "Comentariu",
+    "written_by": "TO TRANSLATE - Written by",
     "comments_count": "comentariu(ii)",
     "new_comment": "Comentariu",
     "placeholder_new_comment": "Adăugare comentariu",
