--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -1572,6 +1572,7 @@
       "complete_download_desc": "Exportar todo o conteúdo do relatório num .zip (.doc e imagens), anexos e o plano de ação em formato .csv.",
       "individual_download": "Descarregar elementos do relatório",
       "individual_download_desc": "Exportar elementos específicos do relatório.",
+      "individual_download_pdf": "TO TRANSLATE - PIA report (.pdf)",
       "individual_download_doc": "Textos (.doc)",
       "individual_download_images": "Elementos visuais (.png) incluindo resumo de riscos, mapeamento de riscos e o plano de ação.",
       "individual_download_json": "Arquivo para importar na ferramenta PIA (arquivo .json)",
