--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -1572,6 +1572,7 @@
     "complete_download_desc": "في أرشيف (.zip)، قم بتحميل+ محتويات الوصف (النص (.doc) والصور) والمرفقات ذات الصلة وخطة العمل بصيغة (.csv).",
     "individual_download": "التحميل",
     "individual_download_desc": "قم  بتحميل عناصر محددة من التحليل.",
+    "individual_download_pdf": "TO TRANSLATE - PIA report (.pdf)",
     "individual_download_doc": "المحتويات النصية (ملف '.doc')",
     "individual_download_images": "عناصر بصرية (ملفات '.png'): نظرة عامة على المخاطر، وخريطة المخاطر، وخطة العمل",
     "individual_download_json": " التحليل الذي يتعين توريده في أداة تقييم أثر حماية البيانات (ملف '.json')",
