--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -1572,6 +1572,7 @@
       "complete_download_desc": "Exportieren des gesamten Berichtsinhaltes (DOC und Bilder), Anhänge und den Aktionsplan im CSV-Format, in ein ZIP-Archiv.",
       "individual_download": "Elemente des Berichts herunterladen",
       "individual_download_desc": "Bestimmte Elemente des Berichts exportieren.",
+      "individual_download_pdf": "TO TRANSLATE - PIA report (.pdf)",
       "individual_download_doc": "Texte (.doc)",
       "individual_download_images": "Visuelle Elemente (.png), einschließlich der Risikoübersicht, der Risikokartierung und des Aktionsplans.",
       "individual_download_json": "Herunterladen (.json)",
