--- a/src/lib/assets/i18n/hr.json
+++ b/src/lib/assets/i18n/hr.json
@@ -1572,6 +1572,7 @@
       "complete_download_desc": "TO TRANSLATE - Export in a .zip archive all the report content (.doc and pictures), attachments and the action plan in a .csv format.",
       "individual_download": "TO TRANSLATE - Download elements of the report",
       "individual_download_desc": "TO TRANSLATE - Export specific elements of the report.",
+      "individual_download_pdf": "TO TRANSLATE - PIA report (.pdf)",
       "individual_download_doc": "TO TRANSLATE - Texts (.doc)",
       "individual_download_images": "TO TRANSLATE - Visual elements (.png) including the risk overview, the risk mapping and the action plan.",
       "individual_download_json": "TO TRANSLATE - Report to import into the PIA tool (.json file)",
