feat: update languages

--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -154,8 +154,8 @@
       "2": "محدودة",
       "3": "مهمة",
       "4": "شديدة",
-      "likelihood": "أخذاً بعين الاعتبار خطة العمل، كيف يمكن إعادة تقييم <span class='red-highlight'>احتمال وقوه هذا الخطر</span> ({{value}})؟",
-      "seriousness": "أخذاً بعين الاعتبار خطة العمل، كيف يمكن إعادة تقييم <span class='red-highlight'>شدة هذا الخطر</span> ({{value}})؟"
+      "likelihood": "أخذاً بعين الاعتبار خطة العمل، كيف يمكن إعادة تقييم <span class='red-highlight'>احتمال وقوه هذا الخطر</span>؟",
+      "seriousness": "أخذاً بعين الاعتبار خطة العمل، كيف يمكن إعادة تقييم <span class='red-highlight'>شدة هذا الخطر</span>؟"
     },
     "improvable": "قابل للتحسين",
     "placeholder_acceptable": "أدلوا بتعليقاتكم من أجل تفسير كيف أن التدابير المفعلة كافية للاستجابة لمتطلبات حماية البيانات.",
