--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -154,8 +154,8 @@
       "2": "Überschaubar",
       "3": "Substantiell",
       "4": "Groß",
-      "likelihood": "Unter Berücksichtigung des Aktionsplans, wie bewerten Sie die <span class = 'red-highlight'> Wahrscheinlichkeit dieses Risikos </span> ({{value}}) erneut?",
-      "seriousness": "Wie bewerten Sie unter Berücksichtigung des Aktionsplans die <span class = 'red-highlight'> Höhe dieses Risikos </span> ({{value}})?"
+      "likelihood": "Unter Berücksichtigung des Aktionsplans, wie bewerten Sie die <span class='red-highlight'> Wahrscheinlichkeit dieses Risikos </span>?",
+      "seriousness": "Wie bewerten Sie unter Berücksichtigung des Aktionsplans die <span class='red-highlight'> Höhe dieses Risikos </span>?"
     },
     "improvable": "verbesserungsfähig",
     "placeholder_acceptable": "Soweit aus den zur Verfügung gestellten Informationen ersichtlich, reichen die durchgeführten Maßnahmen aus, um die Datenschutzanforderungen zu erfüllen.",
@@ -1035,7 +1035,7 @@
       "content": "Der Inhalt der DSFA wurde in die Zwischenablage kopiert."
     },
     "not_enough_measures_to_remove": {
-      "content": "<span class = 'strong'>Warnung, </span><br>Es muss mindestens eine Maßnahme angegeben werden: keine Löschung möglich."
+      "content": "<span class='strong'>Warnung, </span><br>Es muss mindestens eine Maßnahme angegeben werden: keine Löschung möglich."
     },
     "recover_version": {
       "continue": "Fortsetzen",
@@ -1047,12 +1047,12 @@
     },
     "remove_attachment": {
       "comment": "Kommentieren",
-      "content": "<span class = 'strong'> Warnung, </span><br>Sind Sie sicher, dass Sie diesen Anhang entfernen möchten?",
+      "content": "<span class='strong'> Warnung, </span><br>Sind Sie sicher, dass Sie diesen Anhang entfernen möchten?",
       "keep": "Behalten",
       "remove": "Entfernen"
     },
     "remove_measure": {
-      "content": "<span class = 'strong'>Warnung, </span><br>Sind Sie sicher, dass Sie diese Maßnahme entfernen möchten?",
+      "content": "<span class='strong'>Warnung, </span><br>Sind Sie sicher, dass Sie diese Maßnahme entfernen möchten?",
       "keep": "Behalten Sie<br>diese Maßnahme",
       "remove": "Entfernen Sie<br>diese Maßnahme"
     },
@@ -1070,10 +1070,10 @@
       "remove": "Diese Vorlage löschen"
     },
     "same_comment": {
-      "content": "<span class = 'strong'>Warnung, </span><br>Bitte geben Sie einen anderen Kommentar als den zuletzt angegebenen ein."
+      "content": "<span class='strong'>Warnung, </span><br>Bitte geben Sie einen anderen Kommentar als den zuletzt angegebenen ein."
     },
     "signed_pia_validation": {
-      "content": "<span class = 'strong'>Die DSFA wird akzeptiert</span><br>Schließen Sie die Bestätigung der DSFA ab, indem Sie den unterschriebenen Bericht an die zuständige Person anhängen.",
+      "content": "<span class='strong'>Die DSFA wird akzeptiert</span><br>Schließen Sie die Bestätigung der DSFA ab, indem Sie den unterschriebenen Bericht an die zuständige Person anhängen.",
       "download_pia": "Laden Sie die DSFA herunter"
     },
     "simple_pia_validation": {
