--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -154,8 +154,8 @@
       "2": "Περιορισμένη",
       "3": "Σημαντική",
       "4": "Μέγιστη",
-      "likelihood": "Λαμβάνοντας υπόψη το σχέδιο δράσης, πώς επαναξιολογείτε την <span class='red-highlight'>πιθανότητα αυτού του κινδύνου</span> ({{value}});",
-      "seriousness": "Λαμβάνοντας υπόψη το σχέδιο δράσης, πώς επαναξιολογείτε τη <span class='red-highlight'>σοβαρότητα αυτού του κινδύνου</span> ({{value}});"
+      "likelihood": "Λαμβάνοντας υπόψη το σχέδιο δράσης, πώς επαναξιολογείτε την <span class='red-highlight'>πιθανότητα αυτού του κινδύνου</span>;",
+      "seriousness": "Λαμβάνοντας υπόψη το σχέδιο δράσης, πώς επαναξιολογείτε τη <span class='red-highlight'>σοβαρότητα αυτού του κινδύνου</span>;"
     },
     "improvable": "Δεκτικό βελτίωσης",
     "placeholder_acceptable": "Σύμφωνα με τις διαθέσιμες πληροφορίες, τα μέτρα που εφαρμόζονται είναι επαρκή ώστε να πληρούν σωστά τις απαιτήσεις για την προστασία των δεδομένων.",
