--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -154,8 +154,8 @@
       "2": "Ograniczone",
       "3": "Poważne",
       "4": "Maksymalne",
-      "likelihood": "Biorąc pod uwagę plan działania, jak można ponownie ocenić <span class='red-highlight'>prawdopodobieństwo tego ryzyka</span> ({{value}})?",
-      "seriousness": "Biorąc pod uwagę plan działania, jak można ponownie ocenić <span class='red-highlight'>istotność tego ryzyka</span> ({{value}})?"
+      "likelihood": "Biorąc pod uwagę plan działania, jak można ponownie ocenić <span class='red-highlight'>prawdopodobieństwo tego ryzyka</span>?",
+      "seriousness": "Biorąc pod uwagę plan działania, jak można ponownie ocenić <span class='red-highlight'>istotność tego ryzyka</span>?"
     },
     "improvable": "Do ulepszenia",
     "placeholder_acceptable": "Można wpisać komentarz wyjaśniający, w jakim zakresie wdrożone środki są wystarczające dla spełnienia wymagań dotyczących ochrony danych osobowych.",
