--- a/src/lib/assets/i18n/sl.json
+++ b/src/lib/assets/i18n/sl.json
@@ -154,8 +154,8 @@
       "2": "Ograničena",
       "3": "Važna",
       "4": "Maksimalna",
-      "likelihood": "Uzimajući u obzir akcijski plan, koju bi novu procjenu dali <span class='red-highlight'> vjerojatnosti ovog rizika</span> ({{value}})?",
-      "seriousness": "Uzimajući u obzir akcijski plan, koju bi novu procjenu dali <span class = 'red-highlight'> ozbiljnosti ovog rizika</span> ({{value}})?"
+      "likelihood": "Uzimajući u obzir akcijski plan, koju bi novu procjenu dali <span class='red-highlight'> vjerojatnosti ovog rizika</span>?",
+      "seriousness": "Uzimajući u obzir akcijski plan, koju bi novu procjenu dali <span class='red-highlight'> ozbiljnosti ovog rizika</span>?"
     },
     "improvable": "Može se poboljšati",
     "placeholder_acceptable": "Prema dostupnim informacijama, primijenjene mjere odgovaraju pravilnom ispunjavanju zahtjeva za zaštitu podataka.",
@@ -1437,23 +1437,23 @@
             },
             "2": {
               "placeholder": "Unesite prijetnje +",
-              "title": "Koje su glavne <span class ='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
+              "title": "Koje su glavne <span class='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
             },
             "3": {
               "placeholder": "Unesite izvore rizika +",
-              "title": "Koji su izvori <span class ='green-highlight'> rizika </span>"
+              "title": "Koji su izvori <span class='green-highlight'> rizika </span>"
             },
             "4": {
               "placeholder": "Kliknite da biste odabrali kontrole koje odgovaraju na rizik.",
-              "title": "Koja od navedenih <span class = 'green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
+              "title": "Koja od navedenih <span class='green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
             },
             "5": {
               "placeholder": "Ovdje opravdajte procijenjenu ozbiljnost rizika.",
-              "title": "Kako procjenjujete <span class ='green-highlight'> ozbiljnost rizika </span>, posebno prema potencijalnim utjecajima i planiranim kontrolama?"
+              "title": "Kako procjenjujete <span class='green-highlight'> ozbiljnost rizika </span>, posebno prema potencijalnim utjecajima i planiranim kontrolama?"
             },
             "6": {
               "placeholder": "Ovdje opravdajte procijenjenu vjerojatnost.",
-              "title": "Kako procjenjujete vjerojatnost rizika <span class ='green-highlight'> </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
+              "title": "Kako procjenjujete vjerojatnost rizika <span class='green-highlight'> </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
             }
           },
           "short_help": "Analizirajte uzroke i posljedice nezakonitog pristupa podacima i procijenite njegovu ozbiljnosti i vjerojatnost.",
@@ -1467,23 +1467,23 @@
             },
             "2": {
               "placeholder": "Unesite prijetnje +",
-              "title": "Koje su glavne <span class ='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
+              "title": "Koje su glavne <span class='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
             },
             "3": {
               "placeholder": "Unesite izvore rizika +",
-              "title": "Koji su izvori <span class ='green-highlight'> rizika </span>?"
+              "title": "Koji su izvori <span class='green-highlight'> rizika </span>?"
             },
             "4": {
               "placeholder": "Kliknite ovdje za odabir kontrola koje odgovaraju na rizik.",
-              "title": "Koja od navedenih <span class = 'green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
+              "title": "Koja od navedenih <span class='green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
             },
             "5": {
               "placeholder": "Ovdje opravdajte procijenjenu ozbiljnost rizika.",
-              "title": "Kako procjenjujete <span class ='green-highlight'> ozbiljnost rizika </span>, posebno u odnosu na potencijalne utjecaje i planirane kontrole?"
+              "title": "Kako procjenjujete <span class='green-highlight'> ozbiljnost rizika </span>, posebno u odnosu na potencijalne utjecaje i planirane kontrole?"
             },
             "6": {
               "placeholder": "Ovdje opravdajte procijenjenu vjerojatnost.",
-              "title": "Kako procjenjujete <span class ='green-highlight'> vjerojatnost rizika </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
+              "title": "Kako procjenjujete <span class='green-highlight'> vjerojatnost rizika </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
             }
           },
           "short_help": "Analizirajte uzroke i posljedice neželjenih izmjena u podacima i procijenite njihovu ozbiljnost i vjerojatnost.",
@@ -1497,23 +1497,23 @@
             },
             "2": {
               "placeholder": "Unesite prijetnje +",
-              "title": "Koje su glavne <span class ='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
+              "title": "Koje su glavne <span class='green-highlight'> prijetnje </span> koje bi mogle dovesti do rizika?"
             },
             "3": {
               "placeholder": "Upišite izvore rizika +",
-              "title": "Koji su izvori <span class ='green-highlight'> rizika </span>?"
+              "title": "Koji su izvori <span class='green-highlight'> rizika </span>?"
             },
             "4": {
               "placeholder": "Kliknite ovdje za odabir kontrola koje odgovaraju na rizik.",
-              "title": "Koja od navedenih <span class = 'green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
+              "title": "Koja od navedenih <span class='green-highlight'> kontrola </span> doprinosi odgovoru na rizik?"
             },
             "5": {
               "placeholder": "Ovdje opravdajte procijenjenu ozbiljnost rizika.",
-              "title": "Kako procjenjujete <span class ='green-highlight'> ozbiljnost rizika </span>, posebno u odnosu na potencijalne utjecaje i planirane kontrole?"
+              "title": "Kako procjenjujete <span class='green-highlight'> ozbiljnost rizika </span>, posebno u odnosu na potencijalne utjecaje i planirane kontrole?"
             },
             "6": {
               "placeholder": "Ovdje opravdajte procijenjenu vjerojatnost.",
-              "title": "Kako procjenjujete <span class ='green-highlight'> vjerojatnost rizika </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
+              "title": "Kako procjenjujete <span class='green-highlight'> vjerojatnost rizika </span>, posebno u odnosu na prijetnje, izvore rizika i planirane kontrole?"
             }
           },
           "short_help": "Analizirajte uzroke i posljedice gubitka podataka i procijenite njegovu ozbiljnost i vjerojatnost.",
