--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -1085,7 +1085,8 @@
       "unarchive": "Разархивирай ОВЗД"
     },
     "update_server_url_nok": {
-      "content": "Свързването невъзможно."
+      "content": "Свързването невъзможно.",
+      "introspect": "TO TRANSLATE - The Client ID and Client SECRET have not been validated by the server, please check them."
     },
     "update_server_url_ok": {
       "content": "Адресът на сървъра беше актуализиран."
