--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -1085,7 +1085,8 @@
       "unarchive": "Niearchiwizuj PIA"
     },
     "update_server_url_nok": {
-      "content": "Połączenie niemożliwe."
+      "content": "Połączenie niemożliwe.",
+      "introspect": "TO TRANSLATE - The Client ID and Client SECRET have not been validated by the server, please check them."
     },
     "update_server_url_ok": {
       "content": "Adres serwera został zaktualizowany."
